--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Welcome to the ACT-IAC IoT Community of Interest
+title: Welcome to the ACT-IAC IoT and Smart Cities Community of Interest
 description:  Feel free to bookmark this page
